# cellural-compression

./: .gitignore  CMakeLists.txt  README.md  main  main.c
Documentation/: .~lock.2.kis-hazi-feladat-OXHER7.odt#  2.kis-hazi-feladat-OXHER7.odt  temp_data.ods
Examples/Demo1/: README.md  demo.sh  main.c
Examples/Demo2/: README.md  binary_to_image.py  demo.sh  image_to_binary.py  main.c
Examples/Demo3/: RLE  binary_to_image.py  compress.py  compressor.c  decompress.py  demo.sh  image_to_binary.py  main  main.c  rotate_right.txt
Examples/Demo4/: main.c  message.txt
Examples/Demo5/: RLE.c  demo.sh  huffman.py  main  main.c  stringThing.txt
Examples/Demo5/image-tools/: binary_to_image.py  image_to_binary.py
Examples/Demo6/: demo.sh  main  main.c  test  test.c
OXHER7/: RLE.c  binary_to_image.py  demo.sh  main.c
